# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\CategoryController;
 use App\Http\Controllers\PetController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -15,6 +16,12 @@ Route::get('/pets/{id}', [PetController::class, 'show']);
 Route::put('/pets/{id}', [PetController::class, 'update']);
 Route::delete('/pets/{id}', [PetController::class, 'destroy']);
 Route::get('/pets/findByStatus', [PetController::class, 'findByStatus']);
-Route::get('/pets/findByTags', [PetController::class, 'findByTags']);
 Route::post('/pets/{petId}/uploadImage', [PetController::class, 'uploadImage']);
 Route::post('/pets/{petId}', [PetController::class, 'updateWithForm']);
+
+
+Route::get('/categories', [CategoryController::class, 'index']);
+Route::post('/categories', [CategoryController::class, 'store']);
+Route::get('/categories/{id}', [CategoryController::class, 'show']);
+Route::put('/categories/{id}', [CategoryController::class, 'update']);
+Route::delete('/categories/{id}', [CategoryController::class, 'destroy']);
